--- a/app/views/metals/_form.html.erb
+++ b/app/views/metals/_form.html.erb
@@ -1,9 +1,7 @@
-<%= form_for(@metal) do |f| %>
+<%= form_for @metal, html: { class: "new-resource-form" } do |f| %>
 
 	<% if @metal.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@metal.errors.count, "error") %> prohibited these dimensions from being saved:</h2>
-
       <ul>
       <% @metal.errors.full_messages.each do |message| %>
         <li><%= message %>!</li>
