--- a/app/views/quantities/_form.html.erb
+++ b/app/views/quantities/_form.html.erb
@@ -1,12 +1,10 @@
-<%= form_for(@quantity) do |f| %>
+<%= form_for @quantity, html: { class: "new-resource-form" } do |f| %>
 
 	<% if @quantity.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@quantity.errors.count, "error") %> prohibited these dimensions from being saved:</h2>
-
       <ul>
-      <% @quantity.errors.full_messages.each do |message| %>
-        <li><%= message %>!</li>
+      <% @quantity.errors.messages.each do |message| %>
+        <li><%= message[1][0] %>!</li>
       <% end %>
       </ul>
     </div>
