--- a/app/views/coatings/_form.html.erb
+++ b/app/views/coatings/_form.html.erb
@@ -1,9 +1,7 @@
-<%= form_for(@coating) do |f| %>
+<%= form_for @coating, html: { class: "new-resource-form" } do |f| %>
 
 	<% if @coating.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@coating.errors.count, "error") %> prohibited these dimensions from being saved:</h2>
-
       <ul>
       <% @coating.errors.full_messages.each do |message| %>
         <li><%= message %>!</li>
