--- a/app/views/metals/index.html.erb
+++ b/app/views/metals/index.html.erb
@@ -5,7 +5,7 @@
     <% @metals.each do |metal| %>
       <tr>
         <td><%= metal.front %> / <%= metal.back %></td>
-        <td class="text-right"><%= link_to 'Edit', edit_metal_path(metal) %> <%= link_to 'Destroy', metal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="text-right"><%= link_to "<span class='glyphicon glyphicon-edit'></span>".html_safe, edit_metal_path(metal) %><span class="space"></span><%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, metal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
