Add capitalize helper method for multi word capitalizations.

--- a/app/views/coatings/index.html.erb
+++ b/app/views/coatings/index.html.erb
@@ -4,7 +4,7 @@
   <tbody>
     <% @coatings.each do |coating| %>
       <tr>
-        <td><%= coating.front %> / <%= coating.back %></td>
+        <td><%= multi_capitalize( coating.front ) %> / <%= multi_capitalize( coating.back ) %></td>
         <td class="text-right"><span><%= link_to "<span class='glyphicon glyphicon-edit'></span>".html_safe, edit_coating_path(coating) %><span class="space"></span><%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, coating, method: :delete, data: { confirm: 'Are you sure?' } %></span></td>
       </tr>
     <% end %>
