Add html for quote text.

--- a/app/views/static_pages/_search_form.html.erb
+++ b/app/views/static_pages/_search_form.html.erb
@@ -82,14 +82,27 @@
 			</span>
 		</h4>
 
-		<div class="margin-line"></div>
-
 		<h4 id="margin">
 			Margin: 
 			<span class="price-info">
 				<span class="margin"></span>
 			</span>
 		</h4>
+
+		<div id="quote-text">
+			<p><strong>Item:</strong> Business Cards<br>
+			<strong>Size:</strong> Standard 3.5" x 2"<br>
+			<strong>Paper:</strong> #130lb Classic Crest Solar White (heavyweight)<br>
+			<strong>Ink:</strong> 4/4 CMYK<br>
+			<strong>Quantity:</strong> 250<br>
+			<strong>Printing:</strong> $99<br>
+			<strong>Graphics:</strong> $0 TBD<br>
+			<strong>Turnaround:</strong> 2-3 Business Days<br>
+			<br>
+			<strong>Total:</strong> $99.00<br>
+			<br>
+			<i>*The above prices exclude tax and shipping if applicable.</i></p>
+		</div>
 
 	</div>
 
