--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -371,11 +371,11 @@ label {
 }
 
 #selling-price i {
-	font-size: .5em;
+	font-size: .6em;
 }
 
 #production-cost i {
-	font-size: .7em;	
+	font-size: .8em;	
 }
 
 #production-cost, #overhead, #margin {
@@ -384,6 +384,20 @@ label {
 
 #margin {
 	padding-bottom: 25px;
+}
+
+#quote-text {
+	width: 100%;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	margin-bottom: 15px;
+	padding: 30px 0 20px 25px;
+	font-family: Helvetica, Arial, sans-serif;
+}
+
+#quote-text p {
+	font-size: 14px;
+  line-height: 16px;
 }
 
 .details {
