--- a/app/views/static_pages/search.js.erb
+++ b/app/views/static_pages/search.js.erb
@@ -1,5 +1,5 @@
-$('.price').replaceWith("<a class='edit-price'href='/business_cards/<%= j @id %>/edit'><i class='edit glyphicon glyphicon-plus'></i></a> <span class='price'>$<%= j @price %></span>");
-$('.cost').replaceWith("<a class='edit-price'href='/business_cards/<%= j @id %>/edit'><i class='edit glyphicon glyphicon-plus'></i></a> <span class='cost'>- $<%= j @cost %></span>");
+$('.price').replaceWith("<a class='edit-price'href='/business_cards/<%= j @id %>/edit'><i class='edit glyphicon glyphicon-info-sign'></i></a> <span class='price'>$<%= j @price %></span>");
+$('.cost').replaceWith("<a class='edit-price'href='/business_cards/<%= j @id %>/edit'><i class='edit glyphicon glyphicon-info-sign'></i></a> <span class='cost'>- $<%= j @cost %></span>");
 $('.overhead').replaceWith("<span class='overhead'>- $<%= j overhead %></span>");
 $('.margin').replaceWith("<span class='margin'>$<%= j margin %></span>");
 $('.small-btn-search').attr("disabled", "true");
