Add quote text generator feature.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -388,10 +388,9 @@ label {
 
 #quote-text {
 	width: 100%;
-	border: 1px solid #ccc;
-	border-radius: 4px;
+	border-top: 6px solid #e6e6e6;
 	margin-bottom: 15px;
-	padding: 30px 0 20px 25px;
+	padding: 45px 0 20px 0px;
 	font-family: Helvetica, Arial, sans-serif;
 }
 
