--- a/app/views/business_cards/_form.html.erb
+++ b/app/views/business_cards/_form.html.erb
@@ -76,7 +76,7 @@
   <%= b.submit 'Submit', class: "btn small-btn-style" %>
 <% end %>
 
-<%= button_to 'Cancel', root_path, method: :get, class: "btn small-btn-style cancel" %>
+<%= button_to 'Cancel', root_path, method: :get, class: "btn small-btn-style cancel back-button" %>
 
 
 
