--- a/app/views/static_pages/_search_form.html.erb
+++ b/app/views/static_pages/_search_form.html.erb
@@ -91,15 +91,16 @@
 
 		<div id="quote-text">
 			<p><strong>Item:</strong> Business Cards<br>
-			<strong>Size:</strong> Standard 3.5" x 2"<br>
-			<strong>Paper:</strong> #130lb Classic Crest Solar White (heavyweight)<br>
-			<strong>Ink:</strong> 4/4 CMYK<br>
-			<strong>Quantity:</strong> 250<br>
-			<strong>Printing:</strong> $99<br>
+			<strong>Size:</strong> Standard <span id="quote-dimensions"></span><br>
+			<strong>Paper:</strong> <span id="quote-paper"></span><br>
+			<strong>Ink:</strong> <span id="quote-ink"></span> <span id="quote-print-method"></span><br>
+			<strong>Quantity:</strong> <span id="quote-quantity"></span> Business Cards<br>
+			<strong>Box Count:</strong> <span id="quote-box-count"></span><br>
+			<strong>Printing:</strong> $<span id="quote-price"></span> Per Box<br>
 			<strong>Graphics:</strong> $0 TBD<br>
 			<strong>Turnaround:</strong> 2-3 Business Days<br>
 			<br>
-			<strong>Total:</strong> $99.00<br>
+			<strong>Total:</strong> $<span id="quote-total"></span>.00<br>
 			<br>
 			<i>*The above prices exclude tax and shipping if applicable.</i></p>
 		</div>
