Add method for turnaround times on quotes.

--- a/app/views/static_pages/_search_form.html.erb
+++ b/app/views/static_pages/_search_form.html.erb
@@ -98,7 +98,7 @@
 			<strong>Box Count:</strong> <span id="quote-box-count"></span><br>
 			<strong>Printing:</strong> $<span id="quote-price"></span> Per Box<br>
 			<strong>Graphics:</strong> $0 TBD<br>
-			<strong>Turnaround:</strong> 2-3 Business Days<br>
+			<strong>Turnaround:</strong> <span id="quote-turnaround"></span><br>
 			<br>
 			<strong>Total:</strong> $<span id="quote-total"></span>.00<br>
 			<br>
