--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 					<%= render 'search_form' %>
 			</div>
 
-			<div class="new-bc-form hide">
+			<div class="new-bc-form hide"> <!-- hide this after debugging -->
 				<!-- <h1 class="text-center main-header">Enter New BC</h1> -->
 				<%= render 'new_bc_form' %>
 			</div>
