--- a/app/views/static_pages/_search_form.html.erb
+++ b/app/views/static_pages/_search_form.html.erb
@@ -94,6 +94,7 @@
 			<strong>Size:</strong> Standard <span id="quote-dimensions"></span><br>
 			<strong>Paper:</strong> <span id="quote-paper"></span><br>
 			<strong>Ink:</strong> <span id="quote-ink"></span> <span id="quote-print-method"></span><br>
+			<strong>Finishing:</strong> <span id="quote-finishing"></span><br>
 			<strong>Quantity:</strong> <span id="quote-quantity"></span> Business Cards<br>
 			<strong>Box Count:</strong> <span id="quote-box-count"></span><br>
 			<strong>Printing:</strong> $<span id="quote-price"></span> Per Box<br>
