Revise quote generator to use currency format.

--- a/app/views/static_pages/_search_form.html.erb
+++ b/app/views/static_pages/_search_form.html.erb
@@ -97,7 +97,7 @@
 			<strong>Finishing:</strong> <span id="quote-finishing"></span><br>
 			<strong>Quantity:</strong> <span id="quote-quantity"></span> Business Cards<br>
 			<strong>Box Count:</strong> <span id="quote-box-count"></span><br>
-			<strong>Printing:</strong> $<span id="quote-price"></span> Per Box<br>
+			<strong>Printing:</strong> <span id="quote-price"></span> Per Box<br>
 			<strong>Graphics:</strong> $0 (TBD)<br>
 			<strong>Turnaround:</strong> <span id="quote-turnaround"></span><br>
 			<br>
