--- a/app/views/static_pages/new_bc.js.erb
+++ b/app/views/static_pages/new_bc.js.erb
@@ -1,12 +1,16 @@
 $('.search-form').addClass("hide");
 $('.new-bc-form').removeClass("hide");
-$('.similar-header').removeClass("hide");
+// $('.similar-header').removeClass("hide");
 $('.similar-products').append("<%= j similar_products( @similar ) %>");
 $('.alert').empty();
 $('.alert-error').empty();
 $('.business-card-errors').empty();
 
-if ( parseInt("<%= @count %>") <= 5) {
+if ( parseInt("<%= @count %>") > 0 ) {
+	$('.similar-header').removeClass("hide");
+};
+
+if ( parseInt("<%= @count %>") <= 5 ) {
 	$('.load-more').addClass("hide");
 } else {
 	$('.load-more').removeClass("hide");
