--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,29 @@
 <% provide(:title, @user.name) %>
 
 <div class="row">
-	<aside class="col-md-4">
-		<section class="user_info">
-			<h1>
-				<%= gravatar_for @user %>
-				<%= @user.name %>
-			</h1>
-		</section>
-	</aside>
+	<div class="col-1-md center"><%= gravatar_for @user, size: 150, class: "img-circle" %></div>
 </div>
+
+<div class="row">
+	<h1 class="user_name"><%= @user.name %></h1>
+	<%= @user.business_cards.count %>
+</div>
+
+<div class="row">
+	<div class="col-md-4 activity-count"></div>
+	<div class="col-md-4 activity-count"></div>
+	<div class="col-md-4 activity-count"></div>
+</div>
+
+<h1 class="main-header">All Entries</h1>
+
+<table class="table index-tables">
+  <tbody>
+    <% @user.business_cards.each do |business_card| %>
+      <tr>
+        <td><%= link_to "Business Card", edit_business_card_path(business_card) %></td>
+        <td class="text-right"><span><%= link_to "<span class='glyphicon glyphicon-edit'></span>".html_safe, edit_business_card_path(business_card) %><span class="space"></span><%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, business_card, method: :delete, data: { confirm: 'Are you sure?' } %></span></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
