--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -609,9 +609,31 @@ input {
   font-size: 2.5em;
 }
 
-.activity-count {
-	border: 1px solid black;
-	height: 40px;
+.stats-circle {
+	/*border: 1px solid black;*/
+	height: auto;
+}
+
+.stats-circle-middle {
+}
+
+.circles {
+	/*border: 1px solid black;*/
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	margin: auto;
+	/*background: #333333;*/
+  /*color: white;*/
+}
+
+.stats-titles {
+	margin-top: 24px;
+	margin-bottom: 0px;
+}
+
+.stats-data {
+	margin-top: 0px;
 }
 
 
