--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,11 +37,11 @@
 	</div>
 </div>
 
-<% if @user.business_cards.count > 0 %>
+<% if @business_cards.count > 0 %>
 	<h1 class="main-header">All Entries</h1>
 	<table class="table index-tables">
 	  <tbody>
-	    <% @user.business_cards.reverse.each do |business_card| %>
+	    <% @business_cards.each do |business_card| %>
 	      <tr>
 	        <td><%= link_to "#{multi_capitalize(business_card.print_method.print_method)} - #{business_card.ink_color.front}/#{business_card.ink_color.back} x #{business_card.box_count.box_count}", edit_business_card_path(business_card) %><span class="space"></td>
 	        <td class="text-right"><span><%= link_to "<span class='glyphicon glyphicon-edit'></span>".html_safe, edit_business_card_path(business_card) %><span class="space"></span><%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, business_card, method: :delete, data: { confirm: 'Are you sure?' } if current_user.admin? %></span></td>
@@ -49,7 +49,9 @@
 	    <% end %>
 	  </tbody>
 	</table>
+	<div class="center"><%= will_paginate @business_cards %></div>
 <% end %>
+
 
 
 
