--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,12 +2,10 @@
 
 <h1>All Users</h1>
 
-<%= will_paginate %>
-
 <ul class="users">
 		<%= render @users %>
 </ul>
 
-<%= will_paginate %>
+<div class="center"><%= will_paginate %></div>
 
 
