--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,8 @@
 						<ul class="dropdown-menu">
 							<li><%= link_to "Profile", current_user %></li>
 							<li><%= link_to "Settings", edit_user_path(current_user) %></li>
-							<li class="divider"></li>
+							<li><%= link_to "Requests", "/pending_activations" if current_user.admin? %></li>
+							<!-- <li class="divider"></li> -->
 							<li>
 								<%= link_to "Log Out", logout_path, method: "delete" %>
 							</li>
