Resolve multiple flash messages issue.

--- a/app/views/static_pages/search.js.erb
+++ b/app/views/static_pages/search.js.erb
@@ -26,6 +26,7 @@ $("#quote-text").html(replaceCmyk);
 $('i.expand-details').removeClass("hide");
 $('.details-line').removeClass("hide");
 $('.under-line').addClass("hide");
+// $('.alert-success').addClass("hide");
 
 $('i.detail-icons').click(function() {
   $('.details').toggleClass( "hide" );
