--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,12 +23,16 @@
 <% else %>
 
 	<div class="center jumbotron">
-		<h1>Japan Printing & Graphics Price Checker</h1>
+		<h1 class="headliner">Business Card Price Checker</h1>
 
 		<h2>Please <%= link_to "log in", login_path %> to access the price estimate form.</h2>
 
 		<%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
 	</div>
+
+	<script type="text/javascript">
+		$('body').css('background-image', 'url(<%= asset_path("background.svg") %>)');
+	</script>
 
 <% end %>
 
