--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -650,6 +650,10 @@ input {
 	background: transparent;
 }
 
+.headliner-div {
+	margin-bottom: -75px;
+}
+
 .headliner {
 	font-weight: bold;
 	letter-spacing: -1px;
