--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,7 +22,7 @@
 
 <% else %>
 
-	<div class="center jumbotron">
+	<div class="center jumbotron headliner-div">
 		<h1 class="headliner">Business Card Price Checker</h1>
 
 		<h2>Please <%= link_to "log in", login_path %> to access the price estimate form.</h2>
