--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <!-- <footer class="footer"> -->
 	<nav class="navbar container bottom-navbar">
 		<small>
-			Contact the <%= link_to "administrator", '#' %> to report any issues.
+			Contact the <%= link_to "administrator", contact_path, class: "administrator" %> to report any issues.
 		</small>
 		<ul>
 			<li><%= link_to "About",   about_path %></li>
