--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 		<div class="main-container">
 			<%= render 'layouts/header' %>
 			<div class="container">
-				<div class="page-content col-sm-6 col-sm-offset-3">
+				<div class="page-content col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
 
 					<% unless flash[:error_redirect] == true %>
 						<% flash.each do |message_type, message| %>
