Style login and sign up forms.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -672,6 +672,10 @@ input {
 	float: right;
 }
 
+.login-signup {
+	text-transform: uppercase;
+}
+
 @media (max-width: 1200px) {
 	.details-line {
 	    width: 94%;
