--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,25 +1,25 @@
 <% provide(:title, 'Sign Up') %>
 
-<h1>Sign up</h1>
+<h1 class="login-signup">Sign Up</h1>
 
 <div class="row">
-	<div class="col-md-6 col-md-offset-3">
+	<div class="col-md-8 col-md-offset-2">
 		<%= form_for(@user) do |f| %>
 			<%= render 'shared/error_messages' %>
 
-			<%= f.label :name %>
-			<%= f.text_field :name, class: "form-control" %>
+			<%= f.text_field :name, class: "form-control", placeholder: "Name" %>
 
-			<%= f.label :email %>
-			<%= f.email_field :email, class: "form-control" %>
+			<%= f.email_field :email, class: "form-control", placeholder: "Email" %>
 
-			<%= f.label :password %>
-			<%= f.password_field :password, class: "form-control" %>
+			<%= f.password_field :password, class: "form-control", placeholder: "Password" %>
 
-			<%= f.label :password_confirmation, "Confirmation" %>
-			<%= f.password_field :password_confirmation, class: "form-control" %>
+			<%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirmation" %>
 
 			<%= f.submit "Create Account", class: "btn btn-primary" %>
 		<% end %>
 	</div>
 </div>
+
+<script type="text/javascript">
+	$('body').css('background-image', 'url(<%= asset_path("background.svg") %>)');
+</script>
