Add correct help path.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -500,6 +500,12 @@ tr:first-child td {
 	@include box_sizing;
 }
 
+#help-page {
+	text-transform: uppercase;
+	font-weight: bold;
+	margin-bottom: 50px;
+}
+
 
 /* sidebar */
 
