--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li><%= link_to "Home",   root_path %></li>
-				<li><%= link_to "Help",   contact_path %></li>
+				<li><%= link_to "Help",   help_path %></li>
 				<% if logged_in? %>
 					<li><%= link_to "Users", users_path %></li>
 					<li class="dropdown">
