Add basic content to help.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -506,6 +506,11 @@ tr:first-child td {
 	margin-bottom: 50px;
 }
 
+.help-questions {
+	font-size: 20px;
+	font-weight: bold;
+}
+
 
 /* sidebar */
 
