--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,3 +2,19 @@
 
 <h1 id="help-page">Help Page</h1>
 
+<h4 class="help-questions">I've Already Registered But I Can't Log In?</h4>
+<p>In order to protect the sensitive information on this site, not just anyone can create an account. <strong>You must be an employee to use this app.</strong> Even though you have already signed up for the app, an administrator must approve you before you can receive a confirmation email.</p>
+<p>The approval process usually takes a few hours, but might require a couple of days depending on how busy our administrators are.</p>
+<p>When you receive a confirmation email, there is an activation link you must click on in order to complete your registration. This email link will expire within 1 hour from the time the email was sent. So please be sure to click on the link immediately after you receive the email.</p>
+
+<br>
+
+<h4 class="help-questions">Is There Any Way To View Similar Products?</h4>
+<p>At the moment, there is only one way to see similar products. They are displayed by default when you are prompted to add pricing and cost information.</p>
+<p>Specifically, when you fill out the main form (when searching for a particular item) and no product is found, you will notice the two fields below the form requesting pricing and cost information. Below those fields, you will see similar products if they exist. They are listed in increments of 5.</p>
+
+<br>
+
+<h4 class="help-questions">The Price or Cost Has Changed For An Existing Item?</h4>
+<p>If the price or cost has changed for a particular item, you can adjust either figure very easily. Simply click on the little "i" icon located just to the right of either label.</p>
+<p>If the edit was successful, you will see a small message at the top of your screen confirming that the process was completed. Even so, its always good to double check for yourself by looking up the item again.</p>
