Add images to help page.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -511,6 +511,15 @@ tr:first-child td {
 	font-weight: bold;
 }
 
+.help-images {
+	width: 100%;
+}
+
+.contact-header {
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
 
 /* sidebar */
 
