Style headers on login.

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -33,7 +33,7 @@
 <p>Certain select tags on the main search form are editable. You can add more of any given category simply by clicking on the <strong>"+"</strong> button</p>
 <%= image_tag("add-attribute-button.png", class: "help-images") %>
 <br>
-<p>After you click on the <strong>"+"</strong> Button, you will be directed to a form that allows you to enter the information of the item that is missing.</p>
+<p>After you click on the <strong>"+"</strong> Button, you will be directed to a page that allows you to enter the information of the item that is missing. Simply click on the "New [something]" button.</p>
 <%= image_tag("add-attribute-form.png", class: "help-images") %>
 <br>
 
