--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -520,6 +520,11 @@ tr:first-child td {
 	text-transform: uppercase;
 }
 
+.about-header {
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
 
 /* sidebar */
 
