Style update profile (settings) page.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -525,6 +525,11 @@ tr:first-child td {
 	text-transform: uppercase;
 }
 
+.settings-header {
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
 
 /* sidebar */
 
