--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,9 @@
 <%= provide(:title, "Edit User") %>
 
-<h1>Update Your Profile</h1>
+<h1 class="settings-header">Update Your Profile</h1>
 
 <div class="row">
-	<div class="col-md-6 col-md-offset-3">
+	<div class="col-md-8 col-md-offset-2">
 		<%= form_for(@user) do |f| %>
 			<%= render 'shared/error_messages' %>
 
