Style rest of headers.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -530,6 +530,16 @@ tr:first-child td {
 	text-transform: uppercase;
 }
 
+.pending-header {
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.users-header {
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
 
 /* sidebar */
 
