--- a/app/views/pending_activations/index.html.erb
+++ b/app/views/pending_activations/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Pending Activations') %>
 
-<h1>Pending Activations</h1>
+<h1 class="pending-header">Pending Activations</h1>
 
 
 <% if @pending_activations.count == 0 %>
