--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -45,14 +45,9 @@
 
 	<p>Please fill out the form below with any questions or issues you may have. We will get back in touch with you as soon as possible with an answer or resolution.</p>
 
-	<h1 class="contact-header">Contact</h1>
+	<br>
 
-	<%= form_tag('/message', :method => "post", :class => "message") do %>
-			<%= text_area_tag 'message', nil, class: "form-control", size: "25x10", placeholder: "Type your question here." %>
-			<%= submit_tag 'Submit', class: "btn small-btn-style homepage-button small-btn-search" %>
-	<% end %>
-
-	<%= button_to 'Back', root_path, method: :get, class: "btn small-btn-style cancel back-button cancel-message" %>
+	<%= render 'contact_form' %>
 
 <% else %>
 
